# graphics-programming-2022

exercises/: exercise_1.html  exercise_10.html  exercise_12.html  exercise_2.html  exercise_3.html  exercise_4.html  exercise_5.html  exercise_6.html  exercise_7.html  exercise_8.html  exercise_9.html
exercises/exercise_10/: CMakeLists.txt  RayMarcher.cpp  RayMarcher.h  SDFCamera.cpp  SDFCamera.h  SDFGeometry.h  SDFMaterial.cpp  SDFMaterial.h  SDFShader.cpp  SDFShader.h  main.cpp
exercises/exercise_10/shaders/: empty.frag  exercise10_1.frag  raymarcher.glsl  sdflibrary.glsl  sphere_lit.frag
exercises/exercise_10_solutions/: CMakeLists.txt  SDFGeometry.cpp  SDFMaterial.cpp  SDFMaterial.h  SDFObject.cpp  SDFObject.h  main.cpp
exercises/exercise_10_solutions/shaders/: empty.frag  exercise10_1.frag  exercise10_2.frag  raymarcher.vert  sphere_lit.frag
exercises/exercise_11_solutions/exercise_11_sol/: main.cpp
exercises/exercise_12/: CMakeLists.txt  camera.h  main.cpp  mesh.h  model.h  shader.h
exercises/exercise_12_solutions/: main.cpp  mesh.h
exercises/exercise_2/: CMakeLists.txt  main.cpp
exercises/exercise_2_solution/: main.cpp
exercises/exercise_2_solutions/: CMakeLists.txt  main.cpp
exercises/exercise_3_solutions/: main.cpp
exercises/exercise_8/: main.cpp
exercises/exercise_8_solutions/: main.cpp
exercises/exercise_9/: main.cpp
exercises/exercise_9_solutions/: main.cpp
exercises/raytracer/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  RayTracer.cpp  RayTracer.h  Shader.cpp  Shader.h  main.cpp
(+53 files in other folders)
